--- a/直播.html
+++ b/直播.html
@@ -48,7 +48,7 @@
         <div class="video-wrap">
             <div class="video-box">
                 <div class="video-flex">
-                    <video src="video/trail.mp4" controls="controls" class="video"></video>
+                    <video src="video/trail.mp4" controls class="video"></video>
                 </div>
                 <div class="chat-wrap hidden-sm hidden-xs">
                     <div class="chat-box">
@@ -397,3 +397,4 @@
 
 </body>
 </html>
+<script src="js/top.js"></script>
